[gd_scene load_steps=4 format=3 uid="uid://b5hufqs7sbm01"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_ysfbh"]
[ext_resource type="PackedScene" uid="uid://8d3ys4aw51lk" path="res://scenes/player.tscn" id="2_jyiyy"]
[ext_resource type="PackedScene" uid="uid://dplu221g2unkm" path="res://scenes/rts_player.tscn" id="3_gr287"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ysfbh")
player_scene = ExtResource("2_jyiyy")
rts_player = ExtResource("3_gr287")

[node name="Players" type="Node2D" parent="."]

[node name="SpawnMarker" type="Node2D" parent="."]

[node name="PlayerA" type="Marker2D" parent="SpawnMarker"]
position = Vector2(801, 371)

[node name="PlayerB" type="Marker2D" parent="SpawnMarker"]
position = Vector2(210, 354)
